--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "ethers": "^5.3.1",
-    "fs": "*",
+    "fs": "^0.0.1-security",
     "ipfs-core": "^0.7.1",
+    "truffle": "^5.3.10",
     "web3": "^1.3.6"
   }
 }
